Different #ifdef guards cause incorrect use of Monitor::check_block_state()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • b20

      In mutex.cpp, method Monitor::check_block_state() is defined for non products builds (PRODUCT flag not defined), but the bool value _allow_vm_block used inside that method is only properly set if the ASSERT flag is defined.
      For optimized builds (both PRODUCT and ASSERT not defined) check_block_state() prints incorrect warnings because _allow_vm_block is wrongly initialized.

            Assignee:
            Patricio Chilano Mateo
            Reporter:
            Patricio Chilano Mateo
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: