8213708: Different #ifdef guards cause incorrect use of Monitor::check_block_state()

Wrapped check_block_state() method in DEBUG_ONLY macro and make the use of the latter more consistent

Reviewed-by: dcubed, dholmes